# ipylgbst

./: .copier-answers.yml  .coveragerc  .eslintrc.js  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  RELEASE.md  codecov.yml  install.json  ipylgbst.json  jest.config.js  junit.xml  jupyter-lite.json  package-lock.json  package.json  pyproject.toml  pytest.ini  webpack.config.js
.github/workflows/: build.yml  check-release.yml  deploy.yml  publish-release.yml
api/contents/: all.json
css/: widget.css
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
docs/source/_static/: embed-bundle.js  embed-bundle.js.map
examples/: asyc_api.ipynb  introduction.ipynb
extensions/ipylgbst/: package.json
extensions/ipylgbst/static/: 367.96b71b4f3b3c293916e2.js  367.f1500a6e7872ca9bcca3.js  480.111fe52b0bb8bef2b483.js  568.9e40f9ba6cbae7c31be3.js  645.674af9133fa659e9cf20.js  969.9d9aef86f6302ce8e1ce.js  remoteEntry.03772f357de6a94970ee.js  remoteEntry.d3c5d0e7da1c32ca90eb.js  third-party-licenses.json
ipylgbst/: __init__.py  _frontend.py  _version.py  example.py  lego_boost.py
ipylgbst/nbextension/: extension.js  index.js  index.js.map
ipylgbst/tests/: conftest.py  test_example.py  test_nbextension_path.py  test_widget.py
src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts
src/__tests__/: index.spec.ts  utils.ts
ui-tests/: README.md  jupyter_server_test_config.py  package.json
ui-tests/tests/: ipylgbst.spec.ts
