[build-system]
requires = ["hatchling>=1.4.0", "jupyterlab==3.*", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "ipylgbst"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ipywidgets>=7.0.0",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.build.hooks.version]
path = "ipylgbst/_version.py"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build]
artifacts = [
    "ipylgbst/nbextension/index.*",
    "ipylgbst/labextension/*.tgz",
    "ipylgbst/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"ipylgbst/nbextension" = "share/jupyter/nbextensions/ipylgbst"
"ipylgbst/labextension" = "share/jupyter/labextensions/ipylgbst"
"./install.json" = "share/jupyter/labextensions/ipylgbst/install.json"
"./ipylgbst.json" = "etc/jupyter/nbconfig/notebook.d/ipylgbst.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "ipylgbst/nbextension/index.js",
    "ipylgbst/labextension/package.json",
]
skip-if-exists = [
    "ipylgbst/nbextension/index.js",
    "ipylgbst/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "ipylgbst/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = ["python -m pip install jupyterlab~=3.0", "jlpm", "jlpm build:prod"]
before-build-python = ["jlpm clean"]

[tool.check-wheel-contents]
ignore = ["W002"]
